# advent-of-code

./: .gitignore  LICENSE  pyproject.toml
advent-of-code/: __main__.py
advent-of-code/2022/day1/: a.py  b.py
advent-of-code/2022/day2/: a.py  b.py
advent-of-code/2022/day3/: a.py  b.py
advent-of-code/2022/day4/: a.py  b.py
advent-of-code/2022/day5/: a.py  b.py
advent-of-code/2022/day6/: a.py  b.py
advent-of-code/2022/day7/: a.py  b.py
advent-of-code/2024/day1/: a.py
advent-of-code/lib/: util.py
advent_of_code/: __main__.py  template.py
advent_of_code/year_2022/day_1/: a.py  b.py
advent_of_code/year_2022/day_2/: a.py  b.py
advent_of_code/year_2022/day_3/: a.py  b.py
advent_of_code/year_2022/day_4/: a.py  b.py
advent_of_code/year_2022/day_5/: a.py  b.py
advent_of_code/year_2022/day_6/: a.py  b.py
advent_of_code/year_2022/day_7/: a.py  b.py
advent_of_code/year_2024/day_1/: a.py  b.py
