[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code"
authors = ["Emilía Dögg <emilia@emilia.rip>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.15.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
